--- a/htmlcssproject/htmlcssproject/da/style.css
+++ b/htmlcssproject/htmlcssproject/da/style.css
@@ -28,7 +28,7 @@
   
   h1{
     padding:30px;
-    background:darkred;
+    background:linear-gradient( red, darkred);;
     font-weight:bold;
     text-align: center;
     font-size: 50px;
@@ -49,3 +49,21 @@
    form{
     text-align: center;
    }
+
+   table {
+    border-collapse: collapse;
+    width: 100%;
+  }
+  
+  td, th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+  }
+  
+  tr:nth-child(odd){
+    background-color:rgb(90, 1, 20);
+  }
+  tr:nth-child(even) {
+    background-color: rgb(65, 13, 13);
+  }
